--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "@expo/vector-icons": "^15.0.3",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.20",
-    "@react-navigation/native-stack": "^7.6.3",
-    "expo": "~54.0.24",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
+    "@supabase/supabase-js": "^2.84.0",
+    "base64-arraybuffer": "^1.0.2",
+    "expo": "^54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "^19.0.19",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.9",
+    "expo-print": "~15.0.7",
     "expo-router": "~6.0.15",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
